--- a/articles/jason072115.md
+++ b/articles/jason072115.md
@@ -1,3 +1,23 @@
+<properties
+	pageTitle="Test page"
+	description="This is just a test article"
+	services="HDInsight, automation"
+	documentationCenter=""
+	authors="jasron"
+	manager="jasron"
+	editor=""/>
+
+<tags
+	ms.service="HDInsight"
+	ms.workload="identity"
+	ms.tgt_pltfrm="na"
+	ms.devlang="na"
+	ms.topic="article"
+	ms.date="07/23/2015"
+	ms.author="jasron"/>
+
+
+
 #Heading 1
 Here is some text.
 
